--- a/src/dev/index.html
+++ b/src/dev/index.html
@@ -12,7 +12,10 @@
   </style>  
 </head>
 <body>
-    <div id="editor"></div>
+    <div style="position: relative;top:100px;left:100px;">
+      <div id="editor"></div>
+    </div>
+    
     <!-- <script src="./index.js"></script> -->
     <script>
       // console.log(kJSEditor)
