feat scroll mouse事件

--- a/src/dev/index.html
+++ b/src/dev/index.html
@@ -9,13 +9,17 @@
         width: 500px;
         height: 500px;
     }
+    .test{
+      height: 500px;
+      width: 2000px;
+    }
   </style>  
 </head>
 <body>
     <div style="position: relative;top:100px;left:100px;">
       <div id="editor"></div>
     </div>
-    
+    <p class="test"></p>
     <!-- <script src="./index.js"></script> -->
     <script>
       // console.log(kJSEditor)
