--- a/src/dev/index.html
+++ b/src/dev/index.html
@@ -7,19 +7,21 @@
   <style>
     #editor{
         width: 500px;
-        height: 500px;
+        height: 700px;
     }
     .test{
       height: 500px;
       width: 2000px;
+      position: relative;
+      top: 300px;
     }
   </style>  
 </head>
 <body>
-    <div style="position: relative;top:100px;left:100px;">
+    <div>
       <div id="editor"></div>
     </div>
-    <p class="test"></p>
+    <!-- <p class="test"></p> -->
     <!-- <script src="./index.js"></script> -->
     <script>
       // console.log(kJSEditor)
