--- a/src/dev/index.html
+++ b/src/dev/index.html
@@ -18,6 +18,7 @@
   </style>  
 </head>
 <body>
+  <div style="height: 1000px; width: 2500px;"></div>
     <div>
       <div id="editor"></div>
     </div>
